--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@mui/material": "^5.14.19",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
     "redux-saga": "^1.2.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "use-debounce": "^10.0.0",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
